# Practice

./: .gitignore.swp  CMakeLists.txt
10_56/: CMakeLists.txt  main.cpp
11_248/: CMakeLists.txt  main.cpp
13_54/: CMakeLists.txt  main.cpp
14_59/: CMakeLists.txt  main.cpp
15_31/: CMakeLists.txt  file1.txt  file2.txt  main.cpp
16_21/: CMakeLists.txt  main.cpp
17_26/: CMakeLists.txt  main.cpp
2_43/: CMakeLists.txt  main.cpp
3_35/: CMakeLists.txt  main.cpp
4_103/: CMakeLists.txt  main.cpp
4_115/: CMakeLists.txt  main.cpp
4_141/: CMakeLists.txt  main.cpp
4_19/: CMakeLists.txt  main.cpp
4_36/: CMakeLists.txt  main.cpp
4_69/: CMakeLists.txt  main.cpp
5_26/: CMakeLists.txt  main.cpp
5_38/: CMakeLists.txt  main.cpp
5_65/: CMakeLists.txt  main.cpp
6_21/: CMakeLists.txt  main.cpp
7_128/: CMakeLists.txt  main.cpp
8_59/: CMakeLists.txt  main.cpp
